try to fix non visible gravatar -> picture in bio$

--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -70,6 +70,7 @@
 
 .fun {
     height: 30px;
+    background-color: black;
 }
 
 .amanox {
